Produce failure on translation error

--- a/packages/core/i18n/nls.cs.json
+++ b/packages/core/i18n/nls.cs.json
@@ -11,7 +11,33 @@
       "noCallers": "Nebyl zjištěn žádný volající.",
       "open": "Hierarchie otevřených výzev"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Spolupracujte",
+      "collaboration": "Spolupráce",
+      "collaborationWorkspace": "Pracovní prostor pro spolupráci",
+      "connected": "Připojeno",
+      "connectedSession": "Připojení k relaci spolupráce",
+      "copiedInvitation": "Kód pozvánky zkopírovaný do schránky.",
+      "copyAgain": "Znovu kopírovat",
+      "createRoom": "Vytvoření nové relace spolupráce",
+      "creatingRoom": "Vytvoření relace",
+      "end": "Ukončení relace spolupráce",
+      "endDetail": "Ukončit relaci, ukončit sdílení obsahu a zrušit přístup ostatním uživatelům.",
+      "enterCode": "Zadejte kód relace spolupráce",
+      "failedCreate": "Nepodařilo se vytvořit prostor: {0}",
+      "failedJoin": "Nepodařilo se připojit k místnosti: {0}",
+      "invite": "Pozvat ostatní",
+      "inviteDetail": "Zkopírujte si kód pozvánky, abyste ji mohli sdílet s ostatními a připojit se k sezení.",
+      "joinRoom": "Připojte se k zasedání o spolupráci",
+      "joiningRoom": "Připojení k relaci",
+      "leave": "Opustit zasedání pro spolupráci",
+      "leaveDetail": "Odpojte se od aktuální relace spolupráce a zavřete pracovní prostor.",
+      "selectCollaboration": "Vyberte možnost spolupráce",
+      "sharedSession": "Společná relace spolupráce",
+      "startSession": "Zahájení relace spolupráce nebo připojení se k ní",
+      "userWantsToJoin": "Uživatel '{0}' se chce připojit k místnosti pro spolupráci",
+      "whatToDo": "Co byste chtěli dělat s dalšími spolupracovníky?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Kompatibilita",
