--- a/packages/core/i18n/nls.de.json
+++ b/packages/core/i18n/nls.de.json
@@ -11,7 +11,33 @@
       "noCallers": "Es wurden keine Anrufer entdeckt.",
       "open": "Öffne Aufruf-Hierarchie"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Zusammenarbeiten",
+      "collaboration": "Zusammenarbeit",
+      "collaborationWorkspace": "Arbeitsbereich für Zusammenarbeit",
+      "connected": "Verbunden",
+      "connectedSession": "Verbunden mit einer Sitzung zur Zusammenarbeit",
+      "copiedInvitation": "Einladungscode in die Zwischenablage kopiert.",
+      "copyAgain": "Erneut kopieren",
+      "createRoom": "Neue Collaboration-Sitzung erstellen",
+      "creatingRoom": "Sitzung erstellen",
+      "end": "Kollaborationssitzung beenden",
+      "endDetail": "Beenden Sie die Sitzung, beenden Sie die Freigabe von Inhalten und sperren Sie den Zugang für andere.",
+      "enterCode": "Enter collaboration session code",
+      "failedCreate": "Es konnte kein Raum erstellt werden: {0}",
+      "failedJoin": "Verbindung zum Raum fehlgeschlagen: {0}",
+      "invite": "Andere einladen",
+      "inviteDetail": "Kopieren Sie den Einladungscode, um ihn mit anderen zu teilen und an der Sitzung teilzunehmen.",
+      "joinRoom": "An der Collaboration-Sitzung teilnehmen",
+      "joiningRoom": "Beitrittssitzung",
+      "leave": "Kollaborationssitzung verlassen",
+      "leaveDetail": "Trennen Sie die Verbindung zur aktuellen Zusammenarbeitssitzung und schließen Sie den Arbeitsbereich.",
+      "selectCollaboration": "Wählen Sie die Option Zusammenarbeit",
+      "sharedSession": "Gemeinsame Sitzung zur Zusammenarbeit",
+      "startSession": "Zusammenarbeitssitzung starten oder beitreten",
+      "userWantsToJoin": "Benutzer '{0}' möchte dem Collaboration Room beitreten",
+      "whatToDo": "Was würden Sie gerne mit anderen Mitarbeitern machen?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Kompatibilität",
