--- a/packages/core/i18n/nls.es.json
+++ b/packages/core/i18n/nls.es.json
@@ -11,7 +11,33 @@
       "noCallers": "No se ha detectado ninguna llamada.",
       "open": "Jerarquía de la convocatoria abierta"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Colabore",
+      "collaboration": "Colaboración",
+      "collaborationWorkspace": "Espacio de trabajo colaborativo",
+      "connected": "Conectado",
+      "connectedSession": "Conectado a una sesión de colaboración",
+      "copiedInvitation": "Código de invitación copiado en el portapapeles.",
+      "copyAgain": "Copiar de nuevo",
+      "createRoom": "Crear una nueva sesión de colaboración",
+      "creatingRoom": "Crear sesión",
+      "end": "Fin de la sesión de colaboración",
+      "endDetail": "Finalizar la sesión, dejar de compartir contenidos y revocar el acceso a otras personas.",
+      "enterCode": "Introduzca el código de la sesión de colaboración",
+      "failedCreate": "No se ha podido crear la sala: {0}",
+      "failedJoin": "No se ha podido entrar en la sala: {0}",
+      "invite": "Invitar a otros",
+      "inviteDetail": "Copie el código de invitación para compartirlo con otras personas y unirse a la sesión.",
+      "joinRoom": "Unirse a la sesión de colaboración",
+      "joiningRoom": "Sesión inaugural",
+      "leave": "Abandonar la sesión de colaboración",
+      "leaveDetail": "Desconectar de la sesión de colaboración actual y cerrar el espacio de trabajo.",
+      "selectCollaboration": "Seleccione la opción de colaboración",
+      "sharedSession": "Compartió una sesión de colaboración",
+      "startSession": "Iniciar o unirse a una sesión de colaboración",
+      "userWantsToJoin": "Usuario '{0}' quiere unirse a la sala de colaboración",
+      "whatToDo": "¿Qué le gustaría hacer con otros colaboradores?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Compatibilidad",
