--- a/packages/core/i18n/nls.fr.json
+++ b/packages/core/i18n/nls.fr.json
@@ -11,7 +11,33 @@
       "noCallers": "Aucun appelant n'a été détecté.",
       "open": "Hiérarchie des appels ouverts"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Collaborer",
+      "collaboration": "Collaboration",
+      "collaborationWorkspace": "Espace de travail collaboratif",
+      "connected": "Connecté",
+      "connectedSession": "Connecté à une session de collaboration",
+      "copiedInvitation": "Code d'invitation copié dans le presse-papiers.",
+      "copyAgain": "Copier à nouveau",
+      "createRoom": "Créer une nouvelle session de collaboration",
+      "creatingRoom": "Création d'une session",
+      "end": "Fin de la session de collaboration",
+      "endDetail": "Mettre fin à la session, cesser le partage de contenu et révoquer l'accès pour d'autres personnes.",
+      "enterCode": "Enter collaboration session code",
+      "failedCreate": "Échec de la création d'une salle : {0}",
+      "failedJoin": "N'a pas réussi à rejoindre la salle : {0}",
+      "invite": "Inviter d'autres personnes",
+      "inviteDetail": "Copiez le code d'invitation pour le partager avec d'autres personnes afin de participer à la session.",
+      "joinRoom": "Participer à une session de collaboration",
+      "joiningRoom": "Session d'adhésion",
+      "leave": "Quitter la session de collaboration",
+      "leaveDetail": "Se déconnecter de la session de collaboration en cours et fermer l'espace de travail.",
+      "selectCollaboration": "Sélectionner l'option de collaboration",
+      "sharedSession": "Partager une session de collaboration",
+      "startSession": "Démarrer ou rejoindre une session de collaboration",
+      "userWantsToJoin": "User '{0}' wants to join the collaboration room",
+      "whatToDo": "Qu'aimeriez-vous faire avec d'autres collaborateurs ?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Compatibilité",
