--- a/packages/core/i18n/nls.hu.json
+++ b/packages/core/i18n/nls.hu.json
@@ -11,7 +11,33 @@
       "noCallers": "Nem észleltek hívókat.",
       "open": "Nyílt felhívás hierarchia"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Együttműködés",
+      "collaboration": "Együttműködés",
+      "collaborationWorkspace": "Együttműködési munkaterület",
+      "connected": "Csatlakoztatva",
+      "connectedSession": "Együttműködési munkamenethez csatlakoztatva",
+      "copiedInvitation": "Meghívó kódja a vágólapra másolva.",
+      "copyAgain": "Ismétlemásolás",
+      "createRoom": "Új együttműködési munkamenet létrehozása",
+      "creatingRoom": "Munkamenet létrehozása",
+      "end": "Együttműködési ülés befejezése",
+      "endDetail": "A munkamenet megszüntetése, a tartalom megosztásának megszüntetése és a hozzáférés visszavonása mások számára.",
+      "enterCode": "Adja meg az együttműködési munkamenet kódját",
+      "failedCreate": "Nem sikerült helyet létrehozni: {0}",
+      "failedJoin": "Nem sikerült csatlakozni a szobához: {0}",
+      "invite": "Mások meghívása",
+      "inviteDetail": "Másolja ki a meghívó kódját, hogy másokkal is megoszthassa, és csatlakozhasson az üléshez.",
+      "joinRoom": "Csatlakozzon az együttműködési üléshez",
+      "joiningRoom": "Csatlakozási munkamenet",
+      "leave": "Hagyja el az együttműködési ülést",
+      "leaveDetail": "Szakítsa meg a kapcsolatot az aktuális együttműködési munkamenetből, és zárja be a munkaterületet.",
+      "selectCollaboration": "Együttműködési lehetőség kiválasztása",
+      "sharedSession": "Közös együttműködési munkamenet",
+      "startSession": "Együttműködési munkamenet indítása vagy ahhoz való csatlakozás",
+      "userWantsToJoin": "Felhasználó '{0}' csatlakozni szeretne a kollaborációs szobához",
+      "whatToDo": "Mit szeretnél csinálni más munkatársakkal?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Kompatibilitás",
