--- a/packages/core/i18n/nls.it.json
+++ b/packages/core/i18n/nls.it.json
@@ -11,7 +11,33 @@
       "noCallers": "Non sono stati rilevati chiamanti.",
       "open": "Gerarchia delle chiamate aperte"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Collaborate",
+      "collaboration": "Collaborazione",
+      "collaborationWorkspace": "Spazio di lavoro per la collaborazione",
+      "connected": "Collegato",
+      "connectedSession": "Collegato a una sessione di collaborazione",
+      "copiedInvitation": "Codice invito copiato negli appunti.",
+      "copyAgain": "Copia di nuovo",
+      "createRoom": "Creare una nuova sessione di collaborazione",
+      "creatingRoom": "Creazione di una sessione",
+      "end": "Fine della sessione di collaborazione",
+      "endDetail": "Terminare la sessione, interrompere la condivisione dei contenuti e revocare l'accesso ad altri.",
+      "enterCode": "Inserire il codice della sessione di collaborazione",
+      "failedCreate": "Impossibile creare una stanza: {0}",
+      "failedJoin": "Impossibile unirsi alla stanza: {0}",
+      "invite": "Invitare altri",
+      "inviteDetail": "Copiare il codice di invito per condividerlo con altri e partecipare alla sessione.",
+      "joinRoom": "Partecipa alla sessione di collaborazione",
+      "joiningRoom": "Sessione di adesione",
+      "leave": "Lasciare la sessione di collaborazione",
+      "leaveDetail": "Disconnettersi dalla sessione di collaborazione in corso e chiudere l'area di lavoro.",
+      "selectCollaboration": "Selezionare l'opzione di collaborazione",
+      "sharedSession": "Condivisione di una sessione di collaborazione",
+      "startSession": "Avviare o partecipare a una sessione di collaborazione",
+      "userWantsToJoin": "L'utente '{0}' vuole unirsi alla sala di collaborazione",
+      "whatToDo": "Cosa le piacerebbe fare con altri collaboratori?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Compatibilità",
