--- a/packages/core/i18n/nls.ja.json
+++ b/packages/core/i18n/nls.ja.json
@@ -11,7 +11,33 @@
       "noCallers": "発信者は検出されていません。",
       "open": "オープンコールヒエラルキー"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "コラボレーション",
+      "collaboration": "コラボレーション",
+      "collaborationWorkspace": "コラボレーション・ワークスペース",
+      "connected": "接続済み",
+      "connectedSession": "コラボレーション・セッションに接続",
+      "copiedInvitation": "招待状コードがクリップボードにコピーされました。",
+      "copyAgain": "コピー・アゲイン",
+      "createRoom": "新しいコラボレーション・セッションの作成",
+      "creatingRoom": "セッションの作成",
+      "end": "コラボレーション・セッション終了",
+      "endDetail": "セッションを終了し、コンテンツの共有を停止し、他の人のアクセスを取り消す。",
+      "enterCode": "コラボレーションセッションコードを入力",
+      "failedCreate": "部屋の作成に失敗しました:{0}",
+      "failedJoin": "入室に失敗:{0}",
+      "invite": "他の人を招待する",
+      "inviteDetail": "招待コードをコピーして他の人と共有し、セッションに参加してください。",
+      "joinRoom": "コラボレーション・セッションに参加",
+      "joiningRoom": "セッションへの参加",
+      "leave": "コラボレーション・セッション",
+      "leaveDetail": "現在のコラボレーションセッションから切断し、ワークスペースを閉じます。",
+      "selectCollaboration": "コラボレーション・オプションを選択",
+      "sharedSession": "コラボレーション・セッションを共有",
+      "startSession": "コラボレーションセッションの開始または参加",
+      "userWantsToJoin": "ユーザー '{0}' がコラボレーションルームへの参加を希望しています。",
+      "whatToDo": "他の協力者とどんなことをしたいですか?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} 互換性",
