--- a/packages/core/i18n/nls.ko.json
+++ b/packages/core/i18n/nls.ko.json
@@ -11,7 +11,33 @@
       "noCallers": "발신자가 감지되지 않았습니다.",
       "open": "오픈 콜 계층 구조"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "협업",
+      "collaboration": "협업",
+      "collaborationWorkspace": "협업 작업 공간",
+      "connected": "연결됨",
+      "connectedSession": "공동 작업 세션에 연결됨",
+      "copiedInvitation": "초대 코드가 클립보드에 복사되었습니다.",
+      "copyAgain": "다시 복사",
+      "createRoom": "새 공동 작업 세션 만들기",
+      "creatingRoom": "세션 만들기",
+      "end": "협업 세션 종료",
+      "endDetail": "세션을 종료하고, 콘텐츠 공유를 중단하고, 다른 사용자의 액세스 권한을 취소합니다.",
+      "enterCode": "공동 작업 세션 코드 입력",
+      "failedCreate": "공간을 만들지 못했습니다: {0}",
+      "failedJoin": "방에 참여하지 못했습니다: {0}",
+      "invite": "다른 사람 초대",
+      "inviteDetail": "초대 코드를 복사하여 다른 사람들과 공유하여 세션에 참여합니다.",
+      "joinRoom": "협업 세션 참여",
+      "joiningRoom": "세션 참여",
+      "leave": "공동 작업 세션 나가기",
+      "leaveDetail": "현재 공동 작업 세션에서 연결을 끊고 워크스페이스를 닫습니다.",
+      "selectCollaboration": "협업 옵션 선택",
+      "sharedSession": "공동 작업 세션 공유",
+      "startSession": "공동 작업 세션 시작 또는 참여",
+      "userWantsToJoin": "사용자 '{0}' 가 공동 작업실에 참여하려고 합니다.",
+      "whatToDo": "다른 공동 작업자들과 함께 무엇을 하고 싶으신가요?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} 호환성",
