--- a/packages/core/i18n/nls.pl.json
+++ b/packages/core/i18n/nls.pl.json
@@ -11,7 +11,33 @@
       "noCallers": "Nie wykryto żadnych rozmówców.",
       "open": "Hierarchia zaproszeń otwartych"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Współpraca",
+      "collaboration": "Współpraca",
+      "collaborationWorkspace": "Przestrzeń robocza do współpracy",
+      "connected": "Połączony",
+      "connectedSession": "Połączenie z sesją współpracy",
+      "copiedInvitation": "Kod zaproszenia skopiowany do schowka.",
+      "copyAgain": "Kopiuj ponownie",
+      "createRoom": "Utwórz nową sesję współpracy",
+      "creatingRoom": "Tworzenie sesji",
+      "end": "Zakończenie sesji współpracy",
+      "endDetail": "Zakończenie sesji, zaprzestanie udostępniania treści i odebranie dostępu innym osobom.",
+      "enterCode": "Wprowadź kod sesji współpracy",
+      "failedCreate": "Nie udało się utworzyć miejsca: {0}",
+      "failedJoin": "Nie udało się dołączyć do pokoju: {0}",
+      "invite": "Zaproś innych",
+      "inviteDetail": "Skopiuj kod zaproszenia, aby udostępnić go innym osobom i dołączyć do sesji.",
+      "joinRoom": "Dołącz do sesji współpracy",
+      "joiningRoom": "Sesja dołączania",
+      "leave": "Zostaw sesję współpracy",
+      "leaveDetail": "Rozłączenie się z bieżącą sesją współpracy i zamknięcie obszaru roboczego.",
+      "selectCollaboration": "Wybierz opcję współpracy",
+      "sharedSession": "Wspólna sesja współpracy",
+      "startSession": "Rozpoczęcie lub dołączenie do sesji współpracy",
+      "userWantsToJoin": "Użytkownik '{0}' chce dołączyć do pokoju współpracy",
+      "whatToDo": "Co chciałbyś zrobić z innymi współpracownikami?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Zgodność",
