--- a/packages/core/i18n/nls.pt-br.json
+++ b/packages/core/i18n/nls.pt-br.json
@@ -11,7 +11,33 @@
       "noCallers": "Nenhum chamador foi detectado.",
       "open": "Hierarquia de Chamadas Abertas"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Colaborar",
+      "collaboration": "Colaboração",
+      "collaborationWorkspace": "Espaço de trabalho de colaboração",
+      "connected": "Conectado",
+      "connectedSession": "Conectado a uma sessão de colaboração",
+      "copiedInvitation": "Código do convite copiado para a área de transferência.",
+      "copyAgain": "Copiar novamente",
+      "createRoom": "Criar nova sessão de colaboração",
+      "creatingRoom": "Criação de sessão",
+      "end": "Encerrar a sessão de colaboração",
+      "endDetail": "Encerrar a sessão, interromper o compartilhamento de conteúdo e revogar o acesso de outras pessoas.",
+      "enterCode": "Digite o código da sessão de colaboração",
+      "failedCreate": "Falha ao criar a sala: {0}",
+      "failedJoin": "Falha ao entrar na sala: {0}",
+      "invite": "Convidar outras pessoas",
+      "inviteDetail": "Copie o código do convite para compartilhá-lo com outras pessoas e participar da sessão.",
+      "joinRoom": "Participe da sessão de colaboração",
+      "joiningRoom": "Sessão de ingresso",
+      "leave": "Sair da sessão de colaboração",
+      "leaveDetail": "Desconecte-se da sessão de colaboração atual e feche o espaço de trabalho.",
+      "selectCollaboration": "Selecione a opção de colaboração",
+      "sharedSession": "Compartilhou uma sessão de colaboração",
+      "startSession": "Iniciar ou participar de uma sessão de colaboração",
+      "userWantsToJoin": "O usuário '{0}' deseja participar da sala de colaboração",
+      "whatToDo": "O que você gostaria de fazer com outros colaboradores?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Compatibilidade",
