--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -11,7 +11,33 @@
       "noCallers": "Вызывающих не обнаружено.",
       "open": "Иерархия открытых звонков"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "Сотрудничайте",
+      "collaboration": "Сотрудничество",
+      "collaborationWorkspace": "Рабочее пространство для совместной работы",
+      "connected": "Подключено",
+      "connectedSession": "Подключение к сеансу совместной работы",
+      "copiedInvitation": "Код приглашения скопирован в буфер обмена.",
+      "copyAgain": "Повторная копия",
+      "createRoom": "Создать новый сеанс совместной работы",
+      "creatingRoom": "Создание сессии",
+      "end": "Завершение сеанса совместной работы",
+      "endDetail": "Прервите сеанс, прекратите обмен содержимым и отмените доступ для других.",
+      "enterCode": "Введите код сеанса совместной работы",
+      "failedCreate": "Не удалось создать комнату: {0}",
+      "failedJoin": "Не удалось присоединиться к комнате: {0}",
+      "invite": "Пригласите других",
+      "inviteDetail": "Скопируйте код приглашения, чтобы поделиться им с другими людьми и присоединиться к сеансу.",
+      "joinRoom": "Присоединяйтесь к сессии совместной работы",
+      "joiningRoom": "Присоединение к сессии",
+      "leave": "Оставьте сессию совместной работы",
+      "leaveDetail": "Отключитесь от текущего сеанса совместной работы и закройте рабочую область.",
+      "selectCollaboration": "Выберите вариант сотрудничества",
+      "sharedSession": "Совместная сессия сотрудничества",
+      "startSession": "Начать или присоединиться к сеансу совместной работы",
+      "userWantsToJoin": "Пользователь '{0}' хочет присоединиться к комнате для совместной работы",
+      "whatToDo": "Что бы вы хотели сделать с другими соавторами?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Совместимость",
