--- a/packages/core/i18n/nls.tr.json
+++ b/packages/core/i18n/nls.tr.json
@@ -11,7 +11,33 @@
       "noCallers": "Herhangi bir arayan tespit edilmedi.",
       "open": "Açık Çağrı Hiyerarşisi"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "İşbirliği yapın",
+      "collaboration": "İşbirliği",
+      "collaborationWorkspace": "İşbirliği Çalışma Alanı",
+      "connected": "Bağlı",
+      "connectedSession": "Bir işbirliği oturumuna bağlandı",
+      "copiedInvitation": "Davetiye kodu panoya kopyalandı.",
+      "copyAgain": "Tekrar Kopyala",
+      "createRoom": "Yeni İşbirliği Oturumu Oluştur",
+      "creatingRoom": "Oturum Oluşturma",
+      "end": "İşbirliği Oturumunu Sonlandırın",
+      "endDetail": "Oturumu sonlandırın, içerik paylaşımını durdurun ve başkalarının erişimini iptal edin.",
+      "enterCode": "İşbirliği oturum kodunu girin",
+      "failedCreate": "Oda oluşturulamadı: {0}",
+      "failedJoin": "Odaya katılamadı: {0}",
+      "invite": "Başkalarını Davet Edin",
+      "inviteDetail": "Oturuma katılmak üzere başkalarıyla paylaşmak için davet kodunu kopyalayın.",
+      "joinRoom": "İşbirliği Oturumuna Katılın",
+      "joiningRoom": "Katılma Oturumu",
+      "leave": "İşbirliği Oturumundan Ayrılın",
+      "leaveDetail": "Geçerli işbirliği oturumunun bağlantısını kesin ve çalışma alanını kapatın.",
+      "selectCollaboration": "İşbirliği seçeneğini belirleyin",
+      "sharedSession": "Bir işbirliği oturumu paylaştı",
+      "startSession": "İşbirliği oturumunu başlatın veya oturuma katılın",
+      "userWantsToJoin": "Kullanıcı '{0}' işbirliği odasına katılmak istiyor",
+      "whatToDo": "Diğer işbirlikçilerle neler yapmak istersiniz?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} Uyumluluk",
