--- a/packages/core/i18n/nls.zh-cn.json
+++ b/packages/core/i18n/nls.zh-cn.json
@@ -11,7 +11,33 @@
       "noCallers": "没有发现调用者。",
       "open": "打开调用层次结构"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "合作",
+      "collaboration": "合作",
+      "collaborationWorkspace": "协作工作区",
+      "connected": "已连接",
+      "connectedSession": "连接到协作会议",
+      "copiedInvitation": "邀请函代码已复制到剪贴板。",
+      "copyAgain": "再次复制",
+      "createRoom": "创建新的协作会话",
+      "creatingRoom": "创建会话",
+      "end": "结束合作会议",
+      "endDetail": "终止会话,停止内容共享,并取消其他人的访问权限。",
+      "enterCode": "输入协作会话代码",
+      "failedCreate": "创建房间失败:{0}",
+      "failedJoin": "未能加入房间:{0}",
+      "invite": "邀请他人",
+      "inviteDetail": "复制邀请代码,与他人分享,参加会议。",
+      "joinRoom": "参加协作会议",
+      "joiningRoom": "加入会议",
+      "leave": "离开合作会议",
+      "leaveDetail": "断开当前协作会话并关闭工作区。",
+      "selectCollaboration": "选择协作选项",
+      "sharedSession": "共享合作会议",
+      "startSession": "开始或加入协作会议",
+      "userWantsToJoin": "用户 '{0}' 希望加入协作室",
+      "whatToDo": "您想与其他合作者做些什么?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} 兼容性",
