--- a/packages/core/i18n/nls.zh-tw.json
+++ b/packages/core/i18n/nls.zh-tw.json
@@ -11,7 +11,33 @@
       "noCallers": "未偵測到來電者。",
       "open": "開放式呼叫層級"
     },
-    "collaboration": {},
+    "collaboration": {
+      "collaborate": "合作",
+      "collaboration": "合作",
+      "collaborationWorkspace": "協同工作區",
+      "connected": "連接",
+      "connectedSession": "連接至協作會議",
+      "copiedInvitation": "邀請函代碼已複製到剪貼簿。",
+      "copyAgain": "再次複製",
+      "createRoom": "建立新的協作會議",
+      "creatingRoom": "創建會話",
+      "end": "結束協作會議",
+      "endDetail": "終止會話、停止內容共用,並取消其他人的存取權限。",
+      "enterCode": "輸入協作會議代碼",
+      "failedCreate": "建立空間失敗:{0}",
+      "failedJoin": "未能加入房間:{0}",
+      "invite": "邀請他人",
+      "inviteDetail": "複製邀請代碼,以便與他人分享,參加會議。",
+      "joinRoom": "加入協作會議",
+      "joiningRoom": "加入會議",
+      "leave": "休假協作會議",
+      "leaveDetail": "中斷目前的協作工作階段,並關閉工作區。",
+      "selectCollaboration": "選擇合作選項",
+      "sharedSession": "分享協作會議",
+      "startSession": "開始或加入協作會議",
+      "userWantsToJoin": "使用者 '{0}' 想要加入協作室",
+      "whatToDo": "您想與其他合作者做什麼?"
+    },
     "core": {
       "about": {
         "compatibility": "{0} 相容性",
